--- a/views/sanpham.hbs
+++ b/views/sanpham.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <title>sp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -37,16 +37,25 @@
             </form>
         </div>
     </nav>
-    <h1 class="alert-primary col col-sm-12"><span class="badge alert-dismissible">Namntph07245_LAB5</span></h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
 
-        <div class="form-group">
-            <label for="example-input-file"> </label>
-            <input type="file" name="avatar" multiple id="input-many-files" required class="form-control-file border">
+
+    <div class="container rounded-bottom bg-light ">
+        <br> <br>
+        <div class="card" style="width: 18rem;">
+            <img src="../images/abc.jpg" class="card-img-top" alt="Sakura">
+            <div class="card-body">
+                <h5 class="card-title">Tên sản phẩm</h5>
+                <p class="card-text">Miêu tả</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Giá</li>
+                <li class="list-group-item">Loại</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Chi tiết</a>
+            </div>
         </div>
-        <button type="submit" name="Upload" class="btn btn-primary">Submit</button>
-
-    </form>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
