--- a/views/quanlysanpham.hbs
+++ b/views/quanlysanpham.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <title>qlsp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -37,16 +37,40 @@
             </form>
         </div>
     </nav>
-    <h1 class="alert-primary col col-sm-12"><span class="badge alert-dismissible">Namntph07245_LAB5</span></h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
 
-        <div class="form-group">
-            <label for="example-input-file"> </label>
-            <input type="file" name="avatar" multiple id="input-many-files" required class="form-control-file border">
-        </div>
-        <button type="submit" name="Upload" class="btn btn-primary">Submit</button>
-
-    </form>
+    <div class="container rounded-bottom bg-light ">
+        <br>   <br>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Tên sản phẩm</th>
+                <th scope="col">Giá</th>
+                <th scope="col">Loại</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
