--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <title>usp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -37,16 +37,34 @@
             </form>
         </div>
     </nav>
-    <h1 class="alert-primary col col-sm-12"><span class="badge alert-dismissible">Namntph07245_LAB5</span></h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
 
-        <div class="form-group">
-            <label for="example-input-file"> </label>
-            <input type="file" name="avatar" multiple id="input-many-files" required class="form-control-file border">
-        </div>
-        <button type="submit" name="Upload" class="btn btn-primary">Submit</button>
 
-    </form>
+    <div class="container rounded-bottom bg-light ">
+        <br> <br>
+        <form>
+            <div class="form-group">
+                <label for="nameSP">Tên sản phẩm</label>
+                <input type="text" class="form-control" id="nameSP">
+            </div>
+            <div class="form-group">
+                <label for="priceSP">Giá sản phẩm</label>
+                <input type="text" class="form-control" id="priceSP">
+            </div>
+            <div class="form-group">
+                <label for="exImage">Hình ảnh</label>
+                <input type="file" class="form-control-file" id="exImage">
+            </div>
+            <div class="form-group">
+                <label for="aboutSP">Miêu tả sản phẩm</label>
+                <input type="text" class="form-control" id="aboutSP">
+            </div>
+            <div class="form-group">
+                <label for="typeSP">Loại sản shẩm</label>
+                <input type="text" class="form-control" id="typeSP">
+            </div>
+            <button type="submit" class="btn btn-primary">Đăng</button>
+        </form>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
