--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -17,7 +17,7 @@
     </nav>
     <div class="container rounded-bottom bg-light ">
         <br> <br> <br>
-        <form action="/" method="get"  class=" container col-8">
+        <form action="/signIn" method="get"  class=" container col-10">
             <div class="form-group">
                 <label for="InputUsername">Username</label>
                 <input type="text" name="nUser" class="form-control" id="InputUsername" required
