--- a/views/danhsachkhachhang.hbs
+++ b/views/danhsachkhachhang.hbs
@@ -5,6 +5,7 @@
     <title>dskh</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -40,36 +41,39 @@
 
 
     <div class="container rounded-bottom bg-light ">
-        <br>   <br>
-        <table class="table">
+        <br> <br>
+        <table class="table container col-10">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">_id</th>
                 <th scope="col">Username</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Password</th>
+                <th scope="col">Thao tác</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
-            </tbody>
+            <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{textAlert}}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {{#each data}}
+                <tr>
+                    <th scope="row">{{this._id}}</th>
+                    <td name="user">{{this.username}}</td>
+                    <td>{{this.password}}</td>
+                    <td>
+                        <form>
+                            <div class="form-group" style="display: none">
+                                <input type="text" name="idKH" value="{{this._id}}" class="form-control">
+                            </div>
+
+                            <button type="submit" name="del" value="1" class="btn btn-primary">Xóa</button>
+                        </form>
+                    </td>
+                </tr>
+            {{/each}}
         </table>
     </div>
 </div>
