--- a/views/exAdd.hbs
+++ b/views/exAdd.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>qlsp</title>
+    <title>add</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -37,37 +37,16 @@
             </form>
         </div>
     </nav>
+    <h1 class="alert-primary col col-sm-12"><span class="badge alert-dismissible">Namntph07245_LAB5</span></h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
 
-    <div class="container rounded-bottom bg-light ">
-        <br> <br>
-        <table class="table container col-10">
-            <thead>
-            <tr>
-                <th scope="col">_id</th>
-                <th scope="col">Tên sản phẩm</th>
-                <th scope="col">Giá</th>
-                <th scope="col">Mô tả</th>
-                <th scope="col">Loại</th>
-                <th scope="col">Thao tác</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{#each data}}
-                <tr>
-                    <th scope="row">{{this._id}}</th>
-                    <td>{{this.name}}</td>
-                    <td>{{this.price}}</td>
-                    <td>{{this.description}}</td>
-                    <td>{{this.type}}</td>
-                    <td>
-                        <a class="btn btn-primary">Sửa</a>
-                        <a class="btn btn-warning">Xóa</a>
-                    </td>
-                </tr>
-            {{/each}}
-            </tbody>
-        </table>
-    </div>
+        <div class="form-group">
+            <label for="example-input-file"> </label>
+            <input type="file" name="avatar" multiple id="input-many-files" required class="form-control-file border">
+        </div>
+        <button type="submit" name="Upload" class="btn btn-primary">Submit</button>
+
+    </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
