--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -17,21 +17,21 @@
     </nav>
     <div class="container rounded-bottom bg-light ">
         <br> <br> <br>
-        <form action="/index" method="get"  class=" container col-8">
+        <form action="/index" method="get" class=" container col-10">
             <div class="form-group">
                 <label for="InputUsername">Username</label>
-                <input type="text" name="user" class="form-control" id="InputUsername" required
+                <input value="{{user}}" type="text" name="user" class="form-control" id="InputUsername" required
                        placeholder="Enter your username">
             </div>
             <div class="form-group">
                 <label for="InputPassword">Password</label>
-                <input type="password" name="pass" class="form-control" id="InputPassword" required
+                <input value="{{pass}}" type="password" name="pass" class="form-control" id="InputPassword" required
                        placeholder="Enter your password">
             </div>
             <br>
             <div class="row justify-content-center">
                 <div class="col-4">
-                    <button type="submit" class="btn btn-outline-dark col-sm-12 ">Sign in</button>
+                    <button type="submit" name="sm" value="1" class="btn btn-outline-dark col-sm-12 ">Sign in</button>
                 </div>
                 <div class="col-4">
                     <a class="text-dark text-outline-light" href="signUp" style="text-decoration: none;">
@@ -44,6 +44,13 @@
             </div>
         </form>
         <br> <br>
+
+        <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{data}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <br>
     </div>
 </div>
