--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Đăng nhập</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container collapse navbar-collapse col-4">
-            <a class="navbar-brand " href="#"><span class="text-capitalize display-4">Accout Login</span></a>
+            <a class="navbar-brand " href="#"><span class="text-capitalize display-4">Đăng nhập</span></a>
         </div>
     </nav>
     <div class="container rounded-bottom bg-light ">
@@ -31,15 +31,15 @@
             <br>
             <div class="row justify-content-center">
                 <div class="col-4">
-                    <button type="submit" name="sm" value="1" class="btn btn-outline-dark col-sm-12 ">Sign in</button>
+                    <button type="submit" name="sm" value="1" class="btn btn-outline-dark col-sm-12 ">Đăng nhập</button>
                 </div>
                 <div class="col-4">
                     <a class="text-dark text-outline-light" href="signUp" style="text-decoration: none;">
                         <button type="button" class="btn btn-outline-dark col-sm-12" aria-describedby="lgHelp">
-                            Sign up
+                            Đăng ký
                         </button>
                     </a>
-                    <small id="lgHelp" class="form-text text-muted">If you don't already have an account.</small>
+<!--                    <small id="lgHelp" class="form-text text-muted">Nếu bạn chưa có tài khoản nào.</small>-->
                 </div>
             </div>
         </form>
