--- a/views/danhsachkhachhang.hbs
+++ b/views/danhsachkhachhang.hbs
@@ -64,28 +64,35 @@
                     <td name="user">{{this.username}}</td>
                     <td>{{this.password}}</td>
                     <td>
-                        <form>
-                            <div class="form-group" style="display: none">
-                                <input type="text" name="idKH" value="{{this._id}}" class="form-control">
-                                <input type="text" name="userKH" value="{{this.username}}" class="form-control">
-                                <input type="text" name="passKH" value="{{this.password}}" class="form-control">
-                            </div>
-                            <button type="submit" name="del" value="1" class="btn btn-danger">Xóa</button>
-                        </form>
-                        <form action="/signUp" method="get">
-                            <div class="form-group" style="display: none">
-                                <input type="text" name="idKH" value="{{this._id}}" class="form-control">
-                                <input type="text" name="userKH" value="{{this.username}}" class="form-control">
-                                <input type="text" name="passKH" value="{{this.password}}" class="form-control">
-                            </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <form action="/signUp" method="get">
+                                    <div class="form-group" style="display: none">
+                                        <input type="text" name="idKH" value="{{this._id}}" class="form-control">
+                                        <input type="text" name="userKH" value="{{this.username}}" class="form-control">
+                                        <input type="text" name="passKH" value="{{this.password}}" class="form-control">
+                                    </div>
 
-                            <button type="submit" name="update" value="1" class="btn btn-warning">Sửa</button>
+                                    <button type="submit" name="update" value="1" class="btn btn-warning">Sửa</button>
 
-                        </form>
+                                </form>
+                            </div>
+                            <div class="col-sm-5">
+                                <form>
+                                    <div class="form-group" style="display: none">
+                                        <input type="text" name="idKH" value="{{this._id}}" class="form-control">
+                                        <input type="text" name="userKH" value="{{this.username}}" class="form-control">
+                                        <input type="text" name="passKH" value="{{this.password}}" class="form-control">
+                                    </div>
+                                    <button type="submit" name="del" value="1" class="btn btn-danger">Xóa</button>
+                                </form>
+                            </div>
+                        </div>
                     </td>
                 </tr>
             {{/each}}
         </table>
+        <br> <br> <br>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
