--- a/views/sanpham.hbs
+++ b/views/sanpham.hbs
@@ -48,8 +48,8 @@
                 {{#each data}}
                     <div class="col mb-4">
                         <div class="card">
-                            <img src="./khautrang.png" class="card-img-top" width="100px" height="100px"
-                                 alt='image product'>
+                            <img src="{{this.image}}" class="card-img-top" width="100px" height="200px"
+                                 alt='{{this.image}}'>
                             <div class="card-body">
                                 <h5 class="card-title">{{this.name}}</h5>
                                 <p class="card-text">{{this.description}}</p>
