--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -41,10 +41,16 @@
 
     <div class="container rounded-bottom bg-light ">
         <br> <br>
+        <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{data}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <form action="" method="get" class=" container col-10">
             <div class="form-group">
                 <label for="nameSP">Tên sản phẩm</label>
-                <input type="text" class="form-control" name="nameSP">
+                <input type="text" class="form-control"  name="nameSP">
             </div>
             <div class="form-group">
                 <label for="priceSP">Giá sản phẩm</label>
@@ -55,21 +61,21 @@
                 <input type="file" class="form-control-file" name="exImage">
             </div>
             <div class="form-group">
-                <label for="aboutSP">Miêu tả sản phẩm</label>
+                <label for="descriptionSP">Miêu tả sản phẩm</label>
                 <input type="text" class="form-control" name="descriptionSP">
             </div>
             <div class="form-group">
                 <label for="typeSP">Loại sản shẩm</label>
                 <input type="text" class="form-control" name="typeSP">
             </div>
+            <div class="form-group">
+                <label for="slSP">Số lượng</label>
+                <input type="text" class="form-control" name="slSP">
+            </div>
             <button type="submit" class="btn btn-primary">Đăng</button>
         </form>
-        <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
-            {{data}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+
+        <br><br><br>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
