--- a/views/updatesanpham.hbs
+++ b/views/updatesanpham.hbs
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="/danhsachkhachhang">Danh sách khách hàng</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0"style="display: none">
                 <input class="form-control mr-sm-2" type="search" placeholder="Nhập tại đây ..." aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
             </form>
