fix: Cannot create or edit existing users and products

--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -72,7 +72,8 @@
                 <label for="slSP">Số lượng</label>
                 <input type="text" class="form-control" name="slSP">
             </div>
-            <button type="submit" class="btn btn-primary">Đăng</button>
+            <button type="submit"  name="sm" value="1"  class="btn btn-primary">Đăng</button>
+            <button type="reset" class="btn btn-primary">Hủy</button>
         </form>
 
         <br><br><br>
